[package]
name = "which-hash-map-is-faster"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chashmap = "2.2.2"
clap = { version = "3.2.14", features = ["derive"] }
dashmap = { version = "5.3.4", features = ["rayon"] }
flurry = { version = "0.4.0", features = ["rayon"] }
fnv = "1.0.7"
once_cell = "1.13.0"
rayon = "1.5.3"

[features]
dashmap_cache_shared_amount = []
